// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should support checkboxes 1`] = `
<div>
  <div
    class="container"
  >
    <label
      class="label checkbox"
    >
      <div
        class="labelText"
      >
        Input
      </div>
      <input
        aria-invalid="false"
        class="input"
        name="input"
        readonly=""
        type="checkbox"
        value=""
      />
    </label>
    <div
      aria-live="polite"
      class="error"
      hidden=""
      id="input-error-2"
    />
  </div>
</div>
`;

exports[`Input component should support number inputs 1`] = `
<div>
  <div
    class="container"
  >
    <label
      class="label number"
    >
      <div
        class="labelText"
      >
        Input
      </div>
      <input
        aria-invalid="false"
        class="input"
        name="input"
        readonly=""
        type="number"
        value=""
      />
    </label>
    <div
      aria-live="polite"
      class="error"
      hidden=""
      id="input-error-1"
    />
  </div>
</div>
`;

exports[`Input component should support text inputs 1`] = `
<div>
  <div
    class="container"
  >
    <label
      class="label undefined"
    >
      <div
        class="labelText"
      >
        Input
      </div>
      <input
        aria-invalid="false"
        class="input"
        name="input"
        readonly=""
        value="value"
      />
    </label>
    <div
      aria-live="polite"
      class="error"
      hidden=""
      id="input-error-0"
    />
  </div>
</div>
`;
